--- a/package.json
+++ b/package.json
@@ -1,33 +1,45 @@
 {
-  "name": "zen-auth",
+  "name": "@namra_ace/zen-auth",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Enterprise-grade identity management with graceful token rotation",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc",
+    "test": "vitest run",
+    "prepublishOnly": "npm run build"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "keywords": [
+    "auth",
+    "jwt",
+    "security",
+    "redis",
+    "authentication",
+    "typescript"
+  ],
+  "author": "Your Name",
+  "license": "MIT",
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
-    "@types/jest": "^30.0.0",
-    "@types/jsonwebtoken": "^9.0.10",
-    "@types/node": "^25.0.3",
-    "@types/uuid": "^10.0.0",
-    "jest": "^30.2.0",
-    "ts-jest": "^29.4.6",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.9.3",
-    "vitest": "^4.0.16"
+    "@types/jsonwebtoken": "^9.0.7",
+    "@types/node": "^20.10.0",
+    "@types/nodemailer": "^6.4.14",
+    "@types/uuid": "^9.0.7",
+    "typescript": "^5.3.3",
+    "vitest": "^1.0.0"
   },
   "dependencies": {
-    "@types/nodemailer": "^7.0.4",
-    "bcrypt": "^6.0.0",
-    "bcryptjs": "^3.0.3",
-    "jsonwebtoken": "^9.0.3",
-    "nanoid": "^5.1.6",
-    "nodemailer": "^7.0.12",
-    "uuid": "^13.0.0"
+    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^6.9.7",
+    "uuid": "^9.0.1"
+  },
+  "peerDependencies": {
+    "redis": "^4.0.0",
+    "mongoose": "^7.0.0 || ^8.0.0",
+    "pg": "^8.0.0"
   }
 }
