--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
   },
   "peerDependencies": {
     "redis": "^4.0.0",
-    "mongoose": "^7.0.0 || ^8.0.0",
+    "mongoose": "^7.0.0 || ^8.0.0 || ^9.0.0",
     "pg": "^8.0.0"
   }
 }
